# dotfiles

./: .agenix.toml  .gitignore  CLAUDE.md  SECRETS_MANAGEMENT.md  flake.nix  homelab-deployment-plan.md  justfile  secrets.nix
docs/: README.md  action-items.md  architecture.md  deploy_pi.md  deployment.md  modules.md  networking.md  services.md  troubleshooting.md
docs/architecture/: dns.md  security.md
docs/guides/: secrets.md
hetz-nix/: README.md  configuration.nix  flake.nix
home-manager/: hass-cli.nix  home.nix  packages.nix  programs.nix  root.nix  shell.nix
home-manager/modules/: atuin.nix  git.nix  helix.nix  neovim.nix  terminal.nix  tools.nix
home-manager/profiles/: base.nix  desktop.nix  server.nix
hosts/bee/: default.nix  hardware-configuration.nix  network.nix  tailscale-override.nix
hosts/halo/: default.nix  hardware-configuration.nix
hosts/navi/: default.nix  (+3 more)
nix/: DEPLOYMENT.md  DNS-ARCHITECTURE.md  SECRETS_MANAGEMENT.md  SECURITY.md  colmena-deploy.sh  deploy-bee.sh  deploy-host.sh  flake.nix  homelab-deployment-plan.md  justfile  secrets.json  secrets.nix
nix/nixos/scripts/grist-payment-updater/: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml  service.nix
nixos/: configuration.nix  flake.nix  hardware-configuration.nix  home.nix  skipped-pkgs.md
profiles/: server.nix
scripts/: cleanup-space.sh  colmena-deploy.sh  deploy-host.sh  office_lights_on.sh  test-services.sh
secrets/: chatgpt_key.age  cloudflare_dns_token.age  grist_api_key.age  grist_proxy_auth.age  hass_server.age  hass_token.age  tailscale_auth_key.age
(+180 files in other folders)
