[project]
name = "grist-payment-updater"
version = "0.1.0"
description = "Automatically update payment dates in Grist based on recurrence"
dependencies = [
    "httpx>=0.25.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []